--- a/website/package.json
+++ b/website/package.json
@@ -9,33 +9,29 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.4.0",
     "@tailwindcss/ui": "^0.7.2",
-    "@types/video.js": "^7.3.11",
-    "autoprefixer": "^10.2.3",
     "clean-webpack-plugin": "^3.0.0",
-    "compression": "^1.7.4",
     "compression-webpack-plugin": "^7.1.2",
     "concat-with-sourcemaps": "^1.1.0",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.0.1",
     "cssnano": "^4.1.10",
-    "extract-css-chunks-webpack-plugin": "^4.9.0",
-    "extract-loader": "^5.1.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.1",
     "lodash": "^4.17.20",
     "postcss": "^8.2.4",
     "postcss-import": "^14.0.0",
-    "postcss-loader": "^4.1.0",
+    "postcss-loader": "^4.2.0",
     "postcss-preset-env": "^6.7.0",
     "scalajs-friendly-source-map-loader": "^0.1.5",
     "source-map-loader": "2.0.0",
+    "style-loader": "^2.0.0",
     "stylelint": "^13.9.0",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-standard": "^20.0.0",
     "tailwindcss": "^2.0.2",
     "tailwindcss-animations": "^2.0.0",
     "terser-webpack-plugin": "^5.1.1",
-    "webpack": "^5.16.0",
+    "webpack": "^5.17.0",
     "webpack-cli": "4.4.0",
     "webpack-dev-server": "3.11.2"
   },
