--- a/website/package.json
+++ b/website/package.json
@@ -4,7 +4,7 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.2.1",
     "highlight.js": "^10.5.0",
-    "marked": "1.2.8"
+    "marked": "1.2.9"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.4.0",
@@ -16,11 +16,11 @@
     "css-loader": "^5.0.1",
     "cssnano": "^4.1.10",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^4.5.1",
+    "html-webpack-plugin": "^5.0.0",
     "lodash": "^4.17.20",
-    "postcss": "^8.2.4",
+    "postcss": "^8.2.5",
     "postcss-import": "^14.0.0",
-    "postcss-loader": "^4.2.0",
+    "postcss-loader": "^5.0.0",
     "postcss-preset-env": "^6.7.0",
     "scalajs-friendly-source-map-loader": "^0.1.5",
     "source-map-loader": "2.0.0",
@@ -31,15 +31,15 @@
     "tailwindcss": "^2.0.2",
     "tailwindcss-animations": "^2.0.0",
     "terser-webpack-plugin": "^5.1.1",
-    "webpack": "^5.18.0",
-    "webpack-cli": "4.4.0",
+    "webpack": "^5.21.1",
+    "webpack-cli": "4.5.0",
     "webpack-dev-server": "3.11.2"
   },
   "browserslist": [
     "defaults"
   ],
   "scripts": {
-    "start": "webpack serve",
+    "start": "node --max_old_space_size=4096 ./node_modules/webpack/bin/webpack.js serve --progress",
     "start:prod": "webpack serve",
     "build": "webpack --progress",
     "build:prod": "webpack --progress",
