--- a/website/package.json
+++ b/website/package.json
@@ -2,38 +2,38 @@
   "private": true,
   "license": "UNLICENSED",
   "dependencies": {
-    "@tailwindcss/forms": "^0.2.1",
-    "highlight.js": "^10.5.0",
-    "marked": "1.2.9"
+    "highlight.js": "^10.6.0",
+    "marked": "2.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.2.0",
+    "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/typography": "^0.4.0",
-    "@tailwindcss/ui": "^0.7.2",
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^7.1.2",
     "concat-with-sourcemaps": "^1.1.0",
     "copy-webpack-plugin": "^7.0.0",
-    "css-loader": "^5.0.1",
+    "css-loader": "^5.0.2",
     "cssnano": "^4.1.10",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.0.0",
+    "html-webpack-plugin": "^5.1.0",
     "lodash": "^4.17.20",
-    "postcss": "^8.2.5",
+    "postcss": "^8.2.6",
     "postcss-import": "^14.0.0",
     "postcss-loader": "^5.0.0",
     "postcss-preset-env": "^6.7.0",
     "scalajs-friendly-source-map-loader": "^0.1.5",
-    "source-map-loader": "2.0.0",
+    "source-map-loader": "2.0.1",
     "style-loader": "^2.0.0",
-    "stylelint": "^13.9.0",
+    "stylelint": "^13.10.0",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-standard": "^20.0.0",
-    "tailwindcss": "^2.0.2",
+    "tailwindcss": "^2.0.3",
     "tailwindcss-animations": "^2.0.0",
     "terser-webpack-plugin": "^5.1.1",
-    "webpack": "^5.21.1",
+    "webpack": "^5.21.2",
     "webpack-cli": "4.5.0",
-    "webpack-dev-server": "3.11.2"
+    "webpack-dev-server": "^4.0.0-beta.0"
   },
   "browserslist": [
     "defaults"
