--- a/website/package.json
+++ b/website/package.json
@@ -3,7 +3,7 @@
   "license": "UNLICENSED",
   "dependencies": {
     "highlight.js": "^10.6.0",
-    "marked": "2.0.0"
+    "marked": "2.0.1"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.2.0",
@@ -13,7 +13,7 @@
     "compression-webpack-plugin": "^7.1.2",
     "concat-with-sourcemaps": "^1.1.0",
     "copy-webpack-plugin": "^7.0.0",
-    "css-loader": "^5.0.2",
+    "css-loader": "^5.1.0",
     "cssnano": "^4.1.10",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.2.0",
@@ -31,7 +31,7 @@
     "tailwindcss": "^2.0.3",
     "tailwindcss-animations": "^2.0.0",
     "terser-webpack-plugin": "^5.1.1",
-    "webpack": "^5.23.0",
+    "webpack": "^5.24.2",
     "webpack-cli": "4.5.0",
     "webpack-dev-server": "^4.0.0-beta.0"
   },
@@ -39,7 +39,8 @@
     "defaults"
   ],
   "scripts": {
-    "start": "node --max_old_space_size=4096 ./node_modules/webpack/bin/webpack.js serve --progress",
+    "dev": "webpack serve --progress",
+    "start": "webpack serve --progress",
     "start:prod": "webpack serve",
     "build": "webpack --progress",
     "build:prod": "webpack --progress",
