--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,10 +9,9 @@ name: Continuous Integration
 
 on:
   pull_request:
-    branches: ['*']
+    branches: []
   push:
-    branches: ['*']
-    tags: [v*]
+    branches: []
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
