--- a/website/package.json
+++ b/website/package.json
@@ -15,6 +15,7 @@
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.1.0",
     "cssnano": "^4.1.10",
+    "extract-css-chunks-webpack-plugin": "^4.9.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.2.0",
     "lodash": "^4.17.21",
