--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        scala: [2.13.5]
+        scala: [2.13.5, 3.0.0-RC2]
         java: [openjdk@1.11.0]
     runs-on: ${{ matrix.os }}
     steps:
@@ -106,6 +106,16 @@ jobs:
           name: target-${{ matrix.os }}-2.13.5-${{ matrix.java }}
 
       - name: Inflate target directories (2.13.5)
+        run: |
+          tar xf targets.tar
+          rm targets.tar
+
+      - name: Download target directories (3.0.0-RC2)
+        uses: actions/download-artifact@v2
+        with:
+          name: target-${{ matrix.os }}-3.0.0-RC2-${{ matrix.java }}
+
+      - name: Inflate target directories (3.0.0-RC2)
         run: |
           tar xf targets.tar
           rm targets.tar
