--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        scala: [2.13.5, 3.0.0-RC2]
+        scala: [2.13.5, 3.0.0-RC3]
         java: [openjdk@1.11.0]
     runs-on: ${{ matrix.os }}
     steps:
@@ -56,10 +56,10 @@ jobs:
       - name: Check that workflows are up to date
         run: sbt ++${{ matrix.scala }} githubWorkflowCheck
 
-      - run: sbt ++${{ matrix.scala }} test
+      - run: sbt ++${{ matrix.scala }} test website/fastLinkJS
 
       - name: Compress target directories
-        run: tar cf targets.tar  modules/validation-core/target modules/util/target target modules/highlight/target modules/fsm/target modules/websocket/target modules/fetch-circe/target  modules/fetch-upickle/target modules/tailwind-default-theme/target modules/base/target modules/ui/target modules/validation-cats/target modules/fetch/target modules/websocket-upickle/target modules/core/target modules/tailwind/target modules/websocket-circe/target modules/videojs/target modules/markdown/target project/target
+        run: tar cf targets.tar website/target modules/validation-core/target modules/util/target target modules/highlight/target modules/fsm/target modules/websocket/target modules/fetch-circe/target modules/fetch-upickle/target modules/tailwind-default-theme/target modules/base/target modules/ui/target modules/validation-cats/target modules/fetch/target modules/websocket-upickle/target modules/core/target modules/tailwind/target modules/websocket-circe/target modules/videojs/target modules/markdown/target project/target
 
       - name: Upload target directories
         uses: actions/upload-artifact@v2
@@ -110,12 +110,12 @@ jobs:
           tar xf targets.tar
           rm targets.tar
 
-      - name: Download target directories (3.0.0-RC2)
+      - name: Download target directories (3.0.0-RC3)
         uses: actions/download-artifact@v2
         with:
-          name: target-${{ matrix.os }}-3.0.0-RC2-${{ matrix.java }}
+          name: target-${{ matrix.os }}-3.0.0-RC3-${{ matrix.java }}
 
-      - name: Inflate target directories (3.0.0-RC2)
+      - name: Inflate target directories (3.0.0-RC3)
         run: |
           tar xf targets.tar
           rm targets.tar
