--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        scala: [2.13.5, 3.0.0-RC3]
+        scala: [2.13.5, 3.0.0]
         java: [openjdk@1.11.0]
     runs-on: ${{ matrix.os }}
     steps:
@@ -110,12 +110,12 @@ jobs:
           tar xf targets.tar
           rm targets.tar
 
-      - name: Download target directories (3.0.0-RC3)
+      - name: Download target directories (3.0.0)
         uses: actions/download-artifact@v2
         with:
-          name: target-${{ matrix.os }}-3.0.0-RC3-${{ matrix.java }}
+          name: target-${{ matrix.os }}-3.0.0-${{ matrix.java }}
 
-      - name: Inflate target directories (3.0.0-RC3)
+      - name: Inflate target directories (3.0.0)
         run: |
           tar xf targets.tar
           rm targets.tar
