--- a/website/package.json
+++ b/website/package.json
@@ -35,7 +35,7 @@
     "terser-webpack-plugin": "^5.1.2",
     "webpack": "^5.37.1",
     "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^4.0.0-beta.1"
+    "webpack-dev-server": "4.0.0-beta.1"
   },
   "browserslist": [
     "defaults"
