--- a/website/package.json
+++ b/website/package.json
@@ -15,27 +15,27 @@
     "compression-webpack-plugin": "^8.0.1",
     "concat-with-sourcemaps": "^1.1.0",
     "copy-webpack-plugin": "^9.0.1",
-    "css-loader": "^5.2.5",
-    "cssnano": "^5.0.6",
+    "css-loader": "^6.2.0",
+    "cssnano": "^5.0.7",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.1.0",
-    "postcss": "^8.3.5",
+    "postcss": "^8.3.6",
     "postcss-import": "^14.0.2",
     "postcss-loader": "^6.1.1",
     "postcss-preset-env": "^6.7.0",
     "scalajs-friendly-source-map-loader": "^0.1.5",
     "source-map-loader": "^3.0.0",
-    "style-loader": "^3.1.0",
+    "style-loader": "^3.2.1",
     "stylelint": "^13.13.1",
     "stylelint-config-recommended": "^5.0.0",
     "stylelint-config-standard": "^22.0.0",
-    "tailwindcss": "^2.2.4",
+    "tailwindcss": "^2.2.7",
     "terser-webpack-plugin": "^5.1.4",
-    "webpack": "^5.44.0",
+    "webpack": "^5.46.0",
     "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "4.0.0-beta.1"
+    "webpack-dev-server": "4.0.0-rc.0"
   },
   "browserslist": [
     "defaults"
