scala 3.0.2, scalafmt config

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,4 +1,10 @@
 version=3.0.4
+runner.dialect = "scala213"
+fileOverride {
+  "glob:**/scala-3/**" {
+    runner.dialect = scala3
+  }
+}
 style = defaultWithAlign
 align.openParenCallSite = true
 align.openParenDefnSite = true
@@ -19,3 +25,4 @@ includeCurlyBraceInSelectChains = true
 //includeNoParensInSelectChains = true
 binPack.parentConstructors="never"
 //newlines.source="keep"
+align.preset = most
