--- a/website/package.json
+++ b/website/package.json
@@ -2,40 +2,40 @@
   "private": true,
   "license": "UNLICENSED",
   "dependencies": {
-    "highlight.js": "^11.1.0",
+    "highlight.js": "^11.3.1",
     "marked": "2.1.3"
   },
   "devDependencies": {
-    "@tailwindcss/aspect-ratio": "^0.2.0",
-    "@tailwindcss/forms": "^0.3.3",
+    "@tailwindcss/aspect-ratio": "^0.3.0",
+    "@tailwindcss/forms": "^0.3.4",
     "@tailwindcss/jit": "^0.1.18",
     "@tailwindcss/typography": "^0.4.0",
-    "autoprefixer": "^10.3.1",
-    "clean-webpack-plugin": "^4.0.0-alpha.0",
-    "compression-webpack-plugin": "^8.0.1",
+    "autoprefixer": "^10.4.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "compression-webpack-plugin": "^9.0.0",
     "concat-with-sourcemaps": "^1.1.0",
     "copy-webpack-plugin": "^9.0.1",
-    "css-loader": "^6.2.0",
-    "cssnano": "^5.0.7",
+    "css-loader": "^6.5.1",
+    "cssnano": "^5.0.10",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.2",
+    "html-webpack-plugin": "^5.5.0",
     "lodash": "^4.17.21",
-    "mini-css-extract-plugin": "^2.1.0",
-    "postcss": "^8.3.6",
+    "mini-css-extract-plugin": "^2.4.4",
+    "postcss": "^8.3.11",
     "postcss-import": "^14.0.2",
-    "postcss-loader": "^6.1.1",
+    "postcss-loader": "^6.2.0",
     "postcss-preset-env": "^6.7.0",
     "scalajs-friendly-source-map-loader": "^0.1.5",
     "source-map-loader": "^3.0.0",
-    "style-loader": "^3.2.1",
-    "stylelint": "^13.13.1",
-    "stylelint-config-recommended": "^5.0.0",
-    "stylelint-config-standard": "^22.0.0",
-    "tailwindcss": "^2.2.7",
-    "terser-webpack-plugin": "^5.1.4",
-    "webpack": "^5.46.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "4.0.0-rc.0"
+    "style-loader": "^3.3.1",
+    "stylelint": "^14.0.1",
+    "stylelint-config-recommended": "^6.0.0",
+    "stylelint-config-standard": "^23.0.0",
+    "tailwindcss": "^2.2.19",
+    "terser-webpack-plugin": "^5.2.5",
+    "webpack": "^5.62.2",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "4.4.0"
   },
   "browserslist": [
     "defaults"
