--- a/website/package.json
+++ b/website/package.json
@@ -2,50 +2,33 @@
   "private": true,
   "license": "UNLICENSED",
   "dependencies": {
-    "highlight.js": "^11.4.0",
-    "marked": "4.0.9"
+    "highlight.js": "^11.4.0"
   },
   "devDependencies": {
-    "@tailwindcss/aspect-ratio": "^0.4.0",
-    "@tailwindcss/forms": "^0.4.0",
-    "@tailwindcss/jit": "^0.1.18",
-    "@tailwindcss/typography": "^0.5.0",
-    "autoprefixer": "^10.4.2",
-    "clean-webpack-plugin": "^4.0.0",
-    "compression-webpack-plugin": "^9.2.0",
-    "concat-with-sourcemaps": "^1.1.0",
-    "copy-webpack-plugin": "^10.2.0",
-    "css-loader": "^6.5.1",
-    "cssnano": "^5.0.15",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.0",
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9",
+    "autoprefixer": "^10.4.13",
+    "cssnano": "^5.1.15",
     "lodash": "^4.17.21",
-    "mini-css-extract-plugin": "^2.4.6",
-    "postcss": "^8.4.5",
-    "postcss-import": "^14.0.2",
-    "postcss-loader": "^6.2.1",
-    "postcss-preset-env": "^7.2.0",
-    "scalajs-friendly-source-map-loader": "^0.1.5",
-    "source-map-loader": "^3.0.1",
-    "style-loader": "^3.3.1",
-    "stylelint": "^14.2.0",
-    "stylelint-config-recommended": "^6.0.0",
-    "stylelint-config-standard": "^24.0.0",
-    "tailwindcss": "^3.0.12",
-    "terser-webpack-plugin": "^5.3.0",
-    "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "4.7.2"
+    "postcss": "^8.4.21",
+    "postcss-import": "^15.1.0",
+    "postcss-preset-env": "^8.0.1",
+    "stylelint": "^15.2.0",
+    "stylelint-config-recommended": "^10.0.1",
+    "stylelint-config-standard": "^30.0.1",
+    "tailwindcss": "^3.2.7",
+    "vite": "^4.1.2",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-html": "^3.2.0"
   },
   "browserslist": [
     "defaults"
   ],
   "scripts": {
-    "dev": "TAILWIND_DISABLE_TOUCH=1 DEBUG=1 webpack serve --progress",
-    "start": "webpack serve --progress",
-    "start:prod": "webpack serve",
-    "build": "webpack --progress",
-    "build:prod": "webpack --progress",
-    "build:dev": "webpack --progress"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   }
 }
